--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@cecigiu2b/drowpdown-menu",
+  "main": "dist/index.js",
   "version": "1.1.1",
   "private": false,
   "dependencies": {
