--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@cecigiu2b/drowpdown-menu",
+  "name": "@cecigiu2b/dropdown-menu",
   "main": "dist/index.js",
   "version": "1.1.2",
   "private": false,
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": " babel src/lib --out-dir dist --copy-files",
+    "build": ".\\node_modules\\.bin\\babel src/lib --out-dir dist --copy-files ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,9 +33,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@types/core-js": "^2.5.5"
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-env": "^7.19.4"
   }
 }
