--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
     "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@babel/preset-env": "^7.19.4"
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6"
   }
 }
