--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "@cecigiu2b/dropdown-menu",
+  "name": "@cecigiu2b/dropdown-menu-react",
   "main": "dist/index.js",
   "version": "1.1.5",
   "private": false,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": ".\\node_modules\\.bin\\babel src/lib --out-dir dist --copy-files ",
@@ -33,6 +28,9 @@
     ]
   },
   "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
     "@babel/plugin-syntax-jsx": "^7.18.6",
