--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@cecigiu2b/dropdown-menu-react",
   "main": "dist/index.js",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": false,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": ".\\node_modules\\.bin\\babel src/lib --out-dir dist --copy-files ",
