--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@cecigiu2b/dropdown-menu-react",
-  "main": "dist/index.tsx",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "version": "1.4.7",
   "private": false,
   "dependencies": {
@@ -15,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": ".\\node_modules\\.bin\\babel src/lib --out-dir dist --copy-files ",
+    "build": " .\\node_modules\\.bin\\babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,6 +48,7 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
