--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,15 @@
-{
-   "presets": ["@babel/preset-react","@babel/preset-typescript"]
- }
 
+{
+   "presets": [
+     [
+       "@babel/preset-typescript",
+       {
+         "isTSX": true,
+         "allExtensions": true
+       }
+     ]
+   ]
+   
  
+  
+ }
