--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": " babel --presets @babel/preset-typescript src/lib/index.tsx --out-dir dist --copy-files --extensions .tsx,.ts",
+    "build": " babel src/lib --out-dir dist --copy-files ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
