--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
   "name": "@cecigiu2b/dropdown-menu-react",
-  "main": "dist/index.tsx",
-  "module": "dist/index.tsx",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist",
     "README.md"
   ],
   "version": "1.5.5",
   "private": false,
-  "dependencies": {
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.8",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.8.4"
-  },
   "scripts": {
     "start": "react-scripts start",
-    "build": " NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "build": " babel --presets @babel/preset-typescript src/lib --out-dir dist --copy-files --extensions .tsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,6 +38,11 @@
     "@babel/preset-typescript": "^7.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.8",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "typescript": "^4.8.4"
   }
 }
