--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@cecigiu2b/dropdown-menu-react",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.tsx",
+  "module": "dist/index.tsx",
   "files": [
     "dist",
     "README.md"
   ],
-  "version": "1.5.8",
+  "version": "1.5.9",
   "private": false,
   "scripts": {
     "start": "react-scripts start",
