--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cecigiu2b/dropdown-menu-react",
-  "main": "dist/index.tsx",
-  "module": "dist/index.tsx",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist",
     "README.md"
@@ -10,7 +10,7 @@
   "private": false,
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel src/lib --out-dir dist --copy-files",
+    "build": "babel --presets @babel/preset-typescript src/lib --out-dir dist --copy-files --extensions .tsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
