Patch, tranform tsx in js

--- a/babel.config.json
+++ b/babel.config.json
@@ -7,7 +7,13 @@
          "isTSX": true,
          "allExtensions": true
        }
-     ]
+     ],[
+      "@babel/preset-react",
+      {
+        "isTSX": true,
+        "allExtensions": true
+      }
+    ]
    ]
    
  
