--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dist",
     "README.md"
   ],
-  "version": "1.5.13",
+  "version": "1.5.12",
   "private": false,
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel  src/lib --out-dir dist --copy-files",
+    "build": "babel --presets @babel/preset-typescript,@babel/preset-react src/lib --out-dir dist --copy-files --extensions .tsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
