--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "private": false,
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel --presets @babel/preset-typescript,@babel/preset-react src/lib --out-dir dist --copy-files --extensions .tsx",
+    "build": "babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
