--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": false,
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel --presets @babel/preset-typescript,@babel/preset-react src/lib --out-dir dist --copy-files --extensions .tsx",
+    "build": "babel --presets @babel/preset-typescript,@babel/preset-react src/lib --out-dir dist --copy-files --extensions .tsx --ignore __tests__,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,13 +40,16 @@
     "@babel/cli": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.8.4"
   }
 }
