--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "private": false,
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel --presets @babel/preset-typescript,@babel/preset-react src/lib --out-dir dist --copy-files --extensions .tsx --ignore __tests__,test.js,__snapshots__",
-    "test": "react-scripts test",
+    "build": "babel --presets @babel/preset-typescript,@babel/preset-react src/lib --out-dir dist --copy-files --extensions .tsx --ignore __tests__,test.js,coverage",
+    "test": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,5 +51,8 @@
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "micromatch": "^4.0.5"
   }
 }
