--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@cecigiu2b/dropdown-menu-react",
   "main": "dist/index.js",
+  "type": "module",
   "module": "dist/index.js",
   "files": [
     "dist",
