--- a/babel.config.json
+++ b/babel.config.json
@@ -14,7 +14,8 @@
         "allExtensions": true
       }
     ]
-   ]
+   ],
+   "plugins": ["@babel/plugin-transform-modules-commonjs"]
    
  
   
