--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "micromatch": "^4.0.5"
   }
 }
